compiler/tests/fail/arm-m4/intrinsic_uxtbS.jazz
export
fn uxtb(reg u32 arg0) -> reg u32 {
    reg u32 x;
    reg bool nf, zf, vf, cf;

    ?{}, x = #UXTBS(arg0, 0);
    reg u32 res;
    res = x;
    return res;
}
